disable grunt all

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
       <!-- Bootstrapping -->
       <script type="text/javascript" src="app/app.js"></script>
       <script type="text/javascript" src="config/config.route.js"></script>
-      <script type="text/javascript" src="app/common/common.js"></script>
-      <script type="text/javascript" src="app/common/logger.js"></script>
+      <script type="text/javascript" src="common/common.js"></script>
+      <script type="text/javascript" src="common/logger.js"></script>
       
       <!-- app -->
       <script type="text/javascript" src="app/portal/portal.js"></script>
