--- a/src/index.html
+++ b/src/index.html
@@ -31,21 +31,14 @@
     <link rel="stylesheet" href="css/default.css">
     <link href="bower_components/toastr/toastr.css" rel="stylesheet" />
 
-    <!--<!-- CSS -->
-    <!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400"/>-->
-    <!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans"/>-->
-    <!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster"/>-->
-
     <link rel="stylesheet" href="css/style.css" />
-    <!--<link rel="stylesheet" href="css/slideshow.css" />-->
-    <!--<link rel="stylesheet" href="http://www.almogtarbeen.com/combres.axd/siteCss/-2145685977/" />-->
 
     <!-- Favicon and touch icons -->
-    <!--<link rel="shortcut icon" href="assets/ico/favicon.ico" />-->
-    <!--<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png"/>-->
-    <!--<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png"/>-->
-    <!--<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png"/>-->
-    <!--<link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png"/>-->
+    <link rel="shortcut icon" href="assets/ico/favicon.ico" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png"/>
+    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png"/>
 </head>
 <body class="body">
 
@@ -116,7 +109,6 @@
 
 
     <script type="text/javascript" src="js/main.js"></script>
-    <!--<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>-->
 
 </body>
 </html>
